project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: backend.default.svc.cluster.local
      http:
        paths:
        - path: /backend
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
